@@ -29,12 +29,7 @@
 #include <openbabel/mol.h>
 #include <openbabel/obiter.h>
 #include <openbabel/obconversion.h>
-
-namespace OpenBabel
-{
-  bool SafeOpen(std::ifstream &fs, const char *filename);
-  bool SafeOpen(std::ofstream &fs, const char *filename);
-}
+#include <openbabel/obutil.h>
 
 using namespace std;
 using namespace OpenBabel;
