@@ -23,12 +23,7 @@ GNU General Public License for more details.
 
 #include <openbabel/mol.h>
 #include <openbabel/math/matrix3x3.h>
-
-namespace OpenBabel
-{
-bool SafeOpen(std::ifstream &fs, const char *filename);
-bool SafeOpen(std::ofstream &fs, const char *filename);
-}
+#include <openbabel/obutil.h>
 
 using namespace std;
 using namespace OpenBabel;
